--- a/sprint/25/weapons-crime/index.html
+++ b/sprint/25/weapons-crime/index.html
@@ -104,87 +104,22 @@ title: "Weapons Crime in England and Wales: year ending December 2017"
         <div class="col col--md-two-thirds col--lg-three-quarters">
 
           <h2 id="section-1">Summary</h2>
-          <p class="margin-top--0">The latest estimates from the Crime Survey for England and Wales (CSEW) show that most types of crime have stayed
-            at levels similar to the previous year. When looking at the main types of crime, changes were only seen in:
-            <ul>
-              <li>computer misuse offences (28% decrease to 1.37 million offences), which drove the fall in overall CSEW crime</li>
-              <li>vehicle-related thefts (17% increase to 929,000 offences), which is supported by a 16% increase in vehicle
-                offences recorded by the police to 452,683 offences; a category that is well reported to the police and thought
-                to be well recorded</li>
-            </ul>
-          </p>
-          <p class="margin-top--0">All other main types of crime measured by the survey showed no change.</p>
-
-          <p class="margin-top--0"> The latest CSEW estimate of 10.6 million crimes against the household population may seem like a big number, but
-            most people do not experience crime. The survey showed that the large majority of adults (8 in 10) were not a
-            victim of any of the crimes asked about in the survey in the previous 12 months.</p>
-          <!-- <div class="alert-v2">
-            <p>This is an important call-out. <a class="link--underline" href="#">Link</a>.</p>
-          </div> -->
+          <p class="margin-top--0">Police recorded the highest number of offences involving knives since 2011.</p>
+          <p>Offences involving the use of a firearm have also increased in the last year.</p>
 
           <details role="group" class="margin-bottom--4 margin-top--1">
             <summary role="button" aria-controls="details-content-1" aria-expanded="true">
-              <span class="summary" style="font-size:18px;">Read more
-                <span class="visuallyhidden">
-                </span>
+              <span class="summary" style="font-size:18px;">Knife crime reaches a seven-year-high
             </summary>
             <div class="panel" id="details-content-1" aria-hidden="false">
-              <p class="margin-top--0">Police recorded crime data showed evidence that violence was at a similar level to the previous year.</p>
-
-              <p class="margin-top--0">There is evidence of rises in some more harmful, less frequently-occurring offences, such as:
-                <ul>
-                  <li>offences involving knives or sharp instrument (up 22% to 39,598 recorded offences)</li>
-                  <li>offences involving firearms (up 11% to 6,604 recorded offences)</li>
-                </ul>
-              </p>
-              <p class="margin-top--0">These offences tend to be disproportionately concentrated in London and other metropolitan areas; however,
-                the majority of police force areas saw rises in these types of violent crime.
-                <h3>Statistician’s comment</h3>
-                <p class="margin-top--0">"Today’s figures show that, for most types of offence, the picture of crime has been fairly stable, with
-                  levels much lower than the peak seen in the mid-1990s. Eight in ten adults had not experienced any of the
-                  crimes asked about in our survey in the latest year.
-                  <br><br> However, we have seen an increase in the relatively rare, but "high-harm" violent offences such as homicide,
-                  knife crime and gun crime, a trend that has been emerging over the previous two years. We have also seen
-                  evidence that increases in some types of theft have continued, in particular vehicle-related theft and
-                  burglary." </p>
-                <p class="margin-top--0">— Alexa Bradley, Crime Statistics and Analysis, Office for National Statistics</p>
+              <p>The police recorded 39,598 offences involving a knife or sharp instrument in the year ending December 2017. This is a 22% increase compared with the previous year (32,468), and the highest number in the seven-years' of available data.</p>
+              <p>The past three years have seen a rise in the number of recorded crimes involving a knife or sharp instrument. Before this, we saw a general downward trend since the year ending March 2011.</p>
+              <p>“Assault with injury” and “assault with intent to cause serious harm” made up around half (49%) of all crimes involving a knife or sharp instrument. All categories of weapons crime for which we collect data showed increases.</p>
+              <p>London's Metropolitan Police saw the largest increase (accounting for 48% of the total increase).</p>
+              <p>Admissions data for NHS hospitals in England shows a 7% increase in assault by a sharp object. Rising from 4,054 in the year ending March 2016 to 4,351 in the following 12 months.</p>
             </div>
           </details>
 
-          <details role="group" class="margin-bottom--4 margin-top--1">
-            <summary role="button" aria-controls="details-content-1" aria-expanded="true">
-              <span class="summary" style="font-size:18px;">What do you need to know about these numbers?
-                <span class="visuallyhidden">
-                </span>
-            </summary>
-            <div class="panel" id="details-content-1" aria-hidden="false">
-              <p class="margin-top--0">An increase in the number of crimes recorded by the police does not necessarily mean the level of crime has
-                increased. </p>
-              <p class="margin-top--0">For many types of crime, police recorded crime statistics do not provide a reliable measure of levels or trends
-                in crime.</p>
-              <p class="margin-top--0">They only cover crimes that come to the attention of the police and can be affected by changes in policing
-                activity and recording practice and by willingness of victims to report.</p>
-              <p class="margin-top--0">The CSEW does not cover crimes against businesses or those not resident in households and is not well-suited
-                to measuring trends in some of the more harmful crimes that occur in relatively low volumes.</p>
-              <p class="margin-top--0">For offences that are well recorded by the police, police figures provide a useful supplement to the survey
-                and provide insight into areas that the survey does not cover well.</p>
-            </div>
-          </details>
-
-          <details role="group" class="margin-bottom--4 margin-top--1">
-            <summary role="button" aria-controls="details-content-1" aria-expanded="true">
-              <span class="summary" style="font-size:18px;">How do we measure this?
-                <span class="visuallyhidden">
-                </span>
-            </summary>
-            <div class="panel" id="details-content-1" aria-hidden="false">
-              <p class="margin-top--0">This bulletin primarily reports on data from two main sources of crime data: the Crime Survey for England and
-                Wales (CSEW) and police recorded crime. </p>
-              <p class="margin-top--0">The
-                <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales">User guide to crime statistics for England and Wales</a> provides detailed information on the datasets used
-                to compile crime statistics.</p>
-            </div>
-          </details>
 
           <h2 id="section-2">Data</h2>
 
