--- a/sprint/29/fraud/index.html
+++ b/sprint/29/fraud/index.html
@@ -163,13 +163,24 @@ title: "Fraud in England and Wales: year ending December 2017"
                 </p>
               </div>
             </li> -->
-            <li>
+            <!-- <li>
               <a href="#" class="heading-small">Crime in England and Wales: year ending December 2017</a>
               <p class="font-xsmall margin-bottom--1">Microsoft Excel Spreadsheet, 207 KB</p>
             </li>
             <li>
               <a href="#" class="heading-small">Another dataset relating to fraud offences</a>
               <p class="font-xsmall margin-bottom--1">Microsoft Excel Spreadsheet, 154 KB</p>
+            </li> -->
+
+            <li class="margin-bottom--4">
+              <p class="margin-bottom--1"><a class="heading-small" href="#">Crime in England and Wales: Additional tables on Fraud and Cybercrime</a></p>
+              <p class="font-xsmall margin-bottom--1">Released: 19 July 2018</p>
+              <p>Estimates from Crime Survey for England and Wales (CSEW) on fraud and computer misuse.</p>
+            </li>
+            <li class="margin-bottom--4">
+              <p class="margin-bottom--1"><a class="heading-small" href="#">Crime in England and Wales: Appendix Tables</a></p>
+              <p class="font-xsmall margin-bottom--1">Released: 19 July 2018</p>
+              <p>Trends in Crime Survey for England and Wales (CSEW) crime experienced by adults and children aged 10 to15 and Home Office police recorded crime, by offence type.</p>
             </li>
         </ul>
         <!-- <p><a href="#">View all data</a></p> -->
