--- a/sprint/30/fraud/index.html
+++ b/sprint/30/fraud/index.html
@@ -86,9 +86,52 @@ title: "Fraud in England and Wales: year ending December 2017"
   <div class="padding-bottom--6">
     <div class="wrapper">
       <div class="col-wrap">
+
+        <div class="col col--md-one-third col--lg-one-third sticky padding-right--1">
+          <div class="">
+            <h2 class="heading-xsmall margin-top--4 margin-bottom--1">Sections:</h2>
+            <ul class="section-contents">
+              <li>
+                <a href="#section-1">Key findings for weapons crime</a>
+              </li>
+              <li>
+                <a href="#section-2">Get the data</a>
+              </li>
+              <li>
+                <a href="#section-3">Find information about these statistics</a>
+              </li>
+              <li>
+                <a href="#section-4">Read more pages relating to crime</a>
+              </li>
+              <li>
+                <a href="#section-5">Contact us</a>
+              </li>
+            </ul>
+
+            <h2 class="heading-xsmall margin-top--4 margin-bottom--1">More pages related to crime:</h2>
+            <ul class="section-contents">
+              <li>
+                <a href="#section-1">Key findings for weapons crime</a>
+              </li>
+              <li>
+                <a href="#section-2">Get the data</a>
+              </li>
+              <li>
+                <a href="#section-3">Find information about these statistics</a>
+              </li>
+              <li>
+                <a href="#section-4">Read more pages relating to crime</a>
+              </li>
+              <li>
+                <a href="#section-5">Contact us</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
         <div class="col col--md-two-thirds col--lg-two-thirds">
 
-          <h2 id="main-findings" class="margin-top--7">Main findings for fraud</h2>
+          <h2 id="main-findings" class="margin-top--3">Main findings for fraud</h2>
           <p class="heading-small">No increase in the amount of fraud</p>
           <p>3.2 million fraud offences were measured by the Crime Survey for England and Wales (CSEW). This has not increased from the results of last year’s survey.</p>
 
@@ -154,7 +197,6 @@ title: "Fraud in England and Wales: year ending December 2017"
               <p>Further information on each of the Fraud data sources and the differences between them can be found in Section 5.4 of the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales">User guide</a> fand also in the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/articles/overviewoffraudandcomputermisusestatisticsforenglandandwales/2018-01-25">Overview of fraud and computer misuse statistics article</a>.</p>
             </div>
           </details>
-
 
           <h2 id="info-about-stats" class="margin-top--7">Information about these statistics</h2>
           <div class="js-show-hide">
@@ -238,67 +280,50 @@ title: "Fraud in England and Wales: year ending December 2017"
                 <p><strong>Banking and payment card frauds</strong><br />The most prevalent type of fraud, usually involving falsely obtaining or using personal bank or payment card details in order to carry out fraudulent transactions.</p>
                 <p><strong>Computer misuse crime </strong><br />Covers any unauthorised access to computer material, as set out in the Computer Misuse Act 1990 (Annex 2 provides further information). This is not limited to desk or laptop computers and can include any device using operating software accessible online, for example, games consoles, smart phones and smart TVs. It includes offences such as the spread of viruses and other malicious software, hacking and distributed denial of service (DDoS) attacks (the flooding of internet servers to take down network infrastructure or websites).</p>
                 <p>A comprehensive guide to crime types and definitions can be found in the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales#offence-types">ONS User Guide</a></p>
-
               </div>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-        <!-- end of first column -->
 
-    <div class="wrapper">
-          <div class="col-wrap">
-            <div class="col">
-              <h2 id="release-pages" class="margin-top--7">More pages in this release</h2>
-
-            <div class="flex-grid">
-              <div class="flex-col background--gallery border--gallery">
-                <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
-                  <img style="width:100%" src="{{ "/assets/img/charts/crime_overview_chart_sm.png " | relative_url }}" class="" alt="">
-                </div>
-                <div class="padding-left--1 padding-right--1 padding-bottom--4">
-                  <h4><a class="heading-small" href="../crime-overview">Crime in England and Wales</a></h4>
-                  <p>Over the long-term, crime has fallen, but some crimes have risen slightly in the previous 12 months.</p>
-                </div>
-                <div class="position-bottom">
-                  <p class="font-xxsmall margin-bottom--2 padding-left--1">Released: 26 April 2018</p>
-                </div>
+          <h2 id="release-pages" class="margin-top--7">More pages in this release</h2>
+          <div class="flex-grid">
+            <div class="flex-col background--gallery border--gallery">
+              <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
+                <img style="width:100%" src="{{ "/assets/img/charts/crime_overview_chart_sm.png " | relative_url }}" class="" alt="">
               </div>
-              <div class="flex-col background--gallery border--gallery">
-                <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
-                  <img style="width:100%" src="{{ "/assets/img/charts/violent_crime_chart_sm.png " | relative_url }}" class="" alt="">
-                </div>
-                <div class="padding-left--1 padding-right--1 padding-bottom--4">
-                  <h4><a class="heading-small" href="../violent-crime">Violent crime in England and Wales</a></h4>
-                  <p>Little change in levels of violent crime in recent years.</p>
-                </div>
-                <div class="position-bottom">
-                  <p class="font-xxsmall margin-bottom--2 padding-left--1">Released: 26 April 2018</p>
-                </div>
+              <div class="padding-left--1 padding-right--1 padding-bottom--4">
+                <h4><a class="heading-small" href="../crime-overview">Crime in England and Wales</a></h4>
+                <p>Over the long-term, crime has fallen, but some crimes have risen slightly in the previous 12 months.</p>
               </div>
-              <div class="flex-col background--gallery border--gallery">
-                <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
-                  <img style="width:100%" src="{{ "/assets/img/charts/weapons_highlight_sm.png" | relative_url }}" class="" alt="">
-                </div>
-                <div class="padding-left--1 padding-right--1 padding-bottom--4">
-                  <h4><a class="heading-small" href="../weapons-crime">Weapons crime in England and Wales</a></h4>
-                  <p>Police recorded 7,130 (22%) more crimes involving weapons, with knife crime in cities rising most.</p>
-                </div>
-                <div class="position-bottom">
-                  <p class="font-xxsmall margin-bottom--2 padding-left--1">Released: 26 April 2018</p>
-                </div>
+              <div class="position-bottom">
+                <p class="font-xxsmall margin-bottom--2 padding-left--1">Released: 26 April 2018</p>
               </div>
             </div>
-
+            <div class="flex-col background--gallery border--gallery">
+              <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
+                <img style="width:100%" src="{{ "/assets/img/charts/violent_crime_chart_sm.png " | relative_url }}" class="" alt="">
+              </div>
+              <div class="padding-left--1 padding-right--1 padding-bottom--4">
+                <h4><a class="heading-small" href="../violent-crime">Violent crime in England and Wales</a></h4>
+                <p>Little change in levels of violent crime in recent years.</p>
+              </div>
+              <div class="position-bottom">
+                <p class="font-xxsmall margin-bottom--2 padding-left--1">Released: 26 April 2018</p>
+              </div>
+            </div>
+            <div class="flex-col background--gallery border--gallery">
+              <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
+                <img style="width:100%" src="{{ "/assets/img/charts/weapons_highlight_sm.png" | relative_url }}" class="" alt="">
+              </div>
+              <div class="padding-left--1 padding-right--1 padding-bottom--4">
+                <h4><a class="heading-small" href="../weapons-crime">Weapons crime in England and Wales</a></h4>
+                <p>Police recorded 7,130 (22%) more crimes involving weapons, with knife crime in cities rising most.</p>
+              </div>
+              <div class="position-bottom">
+                <p class="font-xxsmall margin-bottom--2 padding-left--1">Released: 26 April 2018</p>
+              </div>
             </div>
           </div>
-        </div>
         <!-- snapshots -->
-
-    <div class="wrapper">
-      <div class="col-wrap">
-        <div class="col col--md-two-thirds col--lg-two-thirds">
 
           <h2 id="contact" class="margin-top--7">Contact us</h2>
           <div class="content-box">
@@ -306,24 +331,13 @@ title: "Fraud in England and Wales: year ending December 2017"
               <a href="#">crimestatistics@ons.gov.uk</a><br>+44 (0)2075 928689</p>
           </div>
 
-          <h2 id="corrections" class="margin-top--7">Corrections</h2>
-          <p></p>
-
-          <p>19 July 2018 10:36</p>
-          <p>A correction has been made to the figure for increase in hospital admissions, in the first bullet point of the Main points and in Section 7: Some weapons offences are rising, but this type of crime remains rare.</p>
-          <p>This was due to a small error when using the incorrect time series data point.</p>
-          <p>We apologise for any inconvenience.</p>
-          <a href="#">View superseded version</a>
-
           <p class="margin-top--7">
             <a href="#top">Back to top</a>
           </p>
+
         </div>
       </div>
     </div>
         <!-- end of main wrapper -->
-
-
-
   </div>
 </main>
