--- a/sprint/30/crime-overview/index.html
+++ b/sprint/30/crime-overview/index.html
@@ -98,19 +98,19 @@ title: "Crime overview: year ending December 2017"
                 <a href="#analysis">Analysis</a>
               </li>
               <li>
-                <a href="#data">Get the data</a>
+                <a href="#data">Get crime data</a>
               </li>
               <li>
                 <a href="#need-to-know">How do we measure this?</a>
               </li>
               <li>
-                <a href="#need-to-know">What do you need to know about these numbers?</a>
+                <a href="#need-to-know">What do you need to know?</a>
               </li>
               <li>
                 <a href="#need-to-know">Glossary</a>
               </li>
               <li>
-                <a href="#more-pages">Read more pages relating to crime</a>
+                <a href="#more-pages">More pages relating to crime</a>
               </li>
               <li>
                 <a href="#more-links">More links</a>
@@ -176,12 +176,12 @@ title: "Crime overview: year ending December 2017"
           <p class="heading-small">Likelihood of being a victim has fallen considerably</p>
           <p>Around 4 in 10 adults were estimated to have been a victim of crime in 1995; before the survey included fraud and computer misuse in its coverage. In the year ending December 2017, just over 1 in 10 adults were a victim of crimes comparable with those measured in the 1995 survey. Including fraud and computer misuse, 2 in 10 adults were a victim of crime in the year ending December 2017.</p>
 
-          <h2 id="data" class="margin-top--7">Get the data</h2>
+          <h2 id="data" class="margin-top--7">Get crime data</h2>
           <p>This bulletin mainly reports on data from two sources of crime data: the Crime Survey for England and Wales (CSEW) and police recorded crime.</p>
           <p>More information on both these sources can be found in the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales">User guide to crime statistics for England and Wales.</a></p>
           <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingdecember2017/relateddata">View all data</a></p>
 
-          <h2 id="need-to-know" class="margin-top--7">Information about these statistics</h2>
+          <h2 id="need-to-know" class="margin-top--7">Using crime data</h2>
           <div class="js-show-hide">
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
                 <div class="js-show-hide__title">
@@ -207,7 +207,7 @@ title: "Crime overview: year ending December 2017"
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
                 <div class="js-show-hide__title">
                   <p class="heading-small">
-                  What do you need to know about these numbers?</p>
+                  What do you need to know?</p>
               </div>
               <div class="js-show-hide__content" style="overflow: auto;">
                 <p><strong>Strengths and limitations of the data</strong><br />The Crime Survey of England and Wales (CSEW) is a survey which asks people whether they have been victims of a crime over the past 12 months. The survey has been consistent since 1981 and therefore is the best source to use when looking at trends over time. It is also a better measurement of crimes which are less likely to be reported to the police, such as, sexual offences.</p>
@@ -261,7 +261,7 @@ title: "Crime overview: year ending December 2017"
             </div>
           </div>
           <!-- snapshots -->
-          <h2 id="more-pages" class="margin-top--7">Read more pages relating to crime</h2>
+          <h2 id="more-pages" class="margin-top--7">More pages in this collection</h2>
           <div class="flex-grid">
             {% include snapshots/fraud-snapshot.html %}
             {% include snapshots/homicide-snapshot.html %}
@@ -273,7 +273,7 @@ title: "Crime overview: year ending December 2017"
           <!-- related links -->
 
           <div id="more-links" class="margin-top--7">
-            <h2>Analysis of fraud</h2>
+            <h2>More about crime</h2>
             <div class="content-box">
               <ul class="list--neutral margin-top--4">
                 <li>
