--- a/sprint/30/fraud/index.html
+++ b/sprint/30/fraud/index.html
@@ -253,7 +253,7 @@ title: "Fraud: year ending December 2017"
           </div>
 
 
-          <h2 id="data" class="margin-top--7">Get the data</h2>
+          <h2 id="data" class="margin-top--7">Get fraud data</h2>
           <p class="list-heading">This page reports on data from: </p>
           <ul>
             <li>Crime Survey for England and Wales (CSEW)</li>
@@ -274,7 +274,7 @@ title: "Fraud: year ending December 2017"
             </div>
           </details>
 
-          <h2 id="need-to-know" class="margin-top--7">Information about these statistics</h2>
+          <h2 id="need-to-know" class="margin-top--7">Using fraud data</h2>
           <div class="js-show-hide">
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
                 <div class="js-show-hide__title">
@@ -303,7 +303,7 @@ title: "Fraud: year ending December 2017"
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
                 <div class="js-show-hide__title">
                   <p class="heading-small">
-                  What do you need to know about these numbers?</p>
+                  What do you need to know?</p>
               </div>
               <div class="js-show-hide__content" style="overflow: auto;">
                 <p><strong>Strengths and limitations of the data</strong></br>
@@ -363,7 +363,7 @@ title: "Fraud: year ending December 2017"
           <!-- related links -->
 
 
-          <h2 id="more-links" class="margin-top--7">Analysis of fraud</h2>
+          <h2 id="more-links" class="margin-top--7">More about fraud</h2>
           <div class="content-box">
             <ul class="list--neutral margin-top--4">
               <li>
