--- a/sprint/30/homicide/index.html
+++ b/sprint/30/homicide/index.html
@@ -173,12 +173,12 @@ title: "Homicide: year ending December 2017"
           <p>In contrast with recent years, police recorded a 2% fall in this sub-category of homicide – 718 offences compared with 732 in the previous three months.</p>
 
 
-          <h2 id="data" class="margin-top--7">Get the data</h2>
+          <h2 id="data" class="margin-top--7">Get homicide data</h2>
           <p>This page mainly reports on data from two sources of crime data: the Crime Survey for England and Wales (CSEW) and police recorded crime.</p>
           <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingdecember2017/relateddata">View all data</a></p>
           <p>More information on both these sources can be found in the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales">User guide to crime statistics for England and Wales</a>.</p>
           <p>The <a href="https://www.ons.gov.uk/redir/eyJhbGciOiJIUzI1NiJ9.eyJpbmRleCI6MSwicGFnZVNpemUiOjEwLCJwYWdlIjoxLCJ1cmkiOiIvcGVvcGxlcG9wdWxhdGlvbmFuZGNvbW11bml0eS9jcmltZWFuZGp1c3RpY2UvZGF0YXNldHMvYXBwZW5kaXh0YWJsZXNob21pY2lkZWluZW5nbGFuZGFuZHdhbGVzIiwibGlzdFR5cGUiOiJyZWxhdGVkZGF0YSJ9.ws97TwMa0gKVDp_h8A7RKJYdoXhdrM8iqdUU_4FKd2Y">Home Office Homicide Index</a> is a separate source of data on homicide in England and Wales. It is published annually, and is a richer source of data than the police recorded crime figures used on this page.</p>
-          <h2 id="need-to-know" class="margin-top--7">Information about these statistics</h2>
+          <h2 id="need-to-know" class="margin-top--7">Using homicide data</h2>
           <div class="js-show-hide">
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
                 <div class="js-show-hide__title">
@@ -205,7 +205,7 @@ title: "Homicide: year ending December 2017"
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
                 <div class="js-show-hide__title">
                   <p class="heading-small">
-                  What do you need to know about these numbers?</p>
+                  What do you need to know?</p>
               </div>
               <div class="js-show-hide__content" style="overflow: auto;">
                 <p><strong>Strengths and limitations of the data</strong></br>
@@ -275,7 +275,7 @@ title: "Homicide: year ending December 2017"
           <!-- related links -->
 
 
-          <h2 id="more-links" class="margin-top--7">Analysis of fraud</h2>
+          <h2 id="more-links" class="margin-top--7">More about homicide</h2>
           <div class="content-box">
             <ul class="list--neutral margin-top--4">
               <li>
@@ -286,7 +286,7 @@ title: "Homicide: year ending December 2017"
           </div>
 
 
-          <h2 id="more-links" class="margin-top--7">You might also be interested in</h2>
+          <h2 id="more-links" class="margin-top--7">You may also be interested in</h2>
           <div class="content-box">
             <ul class="list--neutral margin-top--4">
               <li>
