--- a/sprint/30/violent-crime/index.html
+++ b/sprint/30/violent-crime/index.html
@@ -280,7 +280,7 @@ title: "Violent Crime: year ending December 2017"
           </div>
 
 
-          <h2 id="release-pages" class="margin-top--7">More pages in this release</h2>
+          <h2 id="release-pages" class="margin-top--7">More pages in this collection</h2>
           <!-- snapshots -->
           <div class="flex-grid">
             {% include snapshots/crime-overview-snapshot.html %}
@@ -289,6 +289,23 @@ title: "Violent Crime: year ending December 2017"
           <div class="flex-grid margin-top--2">
             {% include snapshots/homicide-snapshot.html %}
             {% include snapshots/weapons-snapshot.html %}
+          </div>
+
+          <!-- related links -->
+
+
+          <h2 id="more-links" class="margin-top--7">More about violent crime</h2>
+          <div class="content-box">
+            <ul class="list--neutral margin-top--4">
+              <li>
+                <p><a class="font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/articles/thenatureofviolentcrimeinenglandandwales/yearendingmarch2017">The nature of violent crime in England and Wales: year ending March 2017</a></p>
+                <p>Long-term trends and the circumstances of violence (do not include the most recent statistics for the year ending December 2017).</p>
+              </li>
+              <li>
+                <p><a class="font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/compendium/focusonviolentcrimeandsexualoffences/yearendingmarch2015">ONS Focus on Violent Crime and Sexual Offences: Year ending March 2015</a></p>
+                <p>Analysis of violent crime, based on the Crime Survey for England and Wales and police recorded crime.</p>
+              </li>
+            </ul>
           </div>
 
           <!-- contact -->
