--- a/sprint/30/weapons-crime/index.html
+++ b/sprint/30/weapons-crime/index.html
@@ -142,8 +142,6 @@ title: "Weapons Crime: year ending December 2017"
         </div>
         <!-- content -->
         <div class="col col--md-two-thirds col--lg-two-thirds">
-
-          <h2 id="main-findings" class="margin-top--3">Main findings for weapons crime</h2>
           <details role="group" class="margin-bottom--4 margin-top--1">
             <summary role="button" aria-controls="details-content-1" aria-expanded="true">
               <span class="summary">Knife crime reaches a seven-year-high
@@ -205,7 +203,7 @@ title: "Weapons Crime: year ending December 2017"
             </div>
           </details>
 
-          <h2 id="data" class="margin-top--7">Get the data</h2>
+          <h2 id="data" class="margin-top--7">Get weapons crime data</h2>
           <p>This bulletin mainly reports on data from two sources of crime data: the Crime Survey for England and Wales (CSEW) and police recorded crime.</p>
           <p>More information on both these sources can be found in the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales">User guide to crime statistics for England and Wales.</a></p>
           <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingdecember2017/relateddata">View all data</a></p>
@@ -213,7 +211,7 @@ title: "Weapons Crime: year ending December 2017"
 
           <details role="group" class="margin-bottom--4 margin-top--1">
             <summary role="button" aria-controls="details-content-1" aria-expanded="true">
-              <span class="summary">More about the data used in this bulletin</span>
+              <span class="summary">Other data used on this page</span>
             </summary>
             <div class="panel" id="details-content-1" aria-hidden="false">
               <p>Further analysis on offences involving knives or sharp instruments and firearms can be found in <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/datasets/offencesinvolvingtheuseofweaponsdatatables">Offences involving the use of weapons: data tables</a>.
@@ -239,7 +237,7 @@ title: "Weapons Crime: year ending December 2017"
           </details>
 
 
-          <h2 id="info-about-stats" class="margin-top--7">Information about these statistics</h2>
+          <h2 id="info-about-stats" class="margin-top--7">Using weapons crime data</h2>
           <div class="js-show-hide">
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
               <div class="js-show-hide__title">
@@ -265,7 +263,7 @@ title: "Weapons Crime: year ending December 2017"
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
               <div class="js-show-hide__title">
                 <p class="heading-small">
-                  What do you need to know about these numbers?</p>
+                  What do you need to know?</p>
               </div>
               <div class="js-show-hide__content" style="overflow: auto;">
                 <p><strong>Strengths and limitations of the data</strong><br />The Crime Survey of England and Wales (CSEW) is a survey which asks people whether they have been victims of a crime over the past 12 months. The survey has been consistent since
@@ -331,7 +329,7 @@ title: "Weapons Crime: year ending December 2017"
           </div>
 
 
-          <h2 id="release-pages" class="margin-top--7">More pages in this release</h2>
+          <h2 id="release-pages" class="margin-top--7">More pages in this collection</h2>
           <!-- snapshots -->
           <div class="flex-grid">
             {% include snapshots/crime-overview-snapshot.html %}
@@ -340,6 +338,23 @@ title: "Weapons Crime: year ending December 2017"
           <div class="flex-grid margin-top--2">
             {% include snapshots/homicide-snapshot.html %}
             {% include snapshots/violent-crime-snapshot.html %}
+          </div>
+
+          <!-- related links -->
+
+
+          <h2 id="more-links" class="margin-top--7">More about weapons crime</h2>
+          <div class="content-box">
+            <ul class="list--neutral margin-top--4">
+              <li>
+                <p><a class="font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/articles/thenatureofviolentcrimeinenglandandwales/yearendingmarch2017">The nature of violent crime in England and Wales: year ending March 2017</a></p>
+                <p>Long-term trends and the circumstances of violence (do not include the most recent statistics for the year ending December 2017).</p>
+              </li>
+              <li>
+                <p><a class="font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/compendium/focusonviolentcrimeandsexualoffences/yearendingmarch2015">ONS Focus on Violent Crime and Sexual Offences: Year ending March 2015</a></p>
+                <p>Analysis of violent crime, based on the Crime Survey for England and Wales and police recorded crime.</p>
+              </li>
+            </ul>
           </div>
 
           <!-- contact -->
